// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Rendering bands - areas Single band area chart Can render two points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{__global__}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        3,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 50,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{__global__}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y0",
      "datum": [
        1,
        3,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 3,
    },
    "x": 50,
    "y": 70,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{__global__}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{__global__}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y0",
      "datum": [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 2,
    },
    "x": 0,
    "y": 80,
  },
]
`;

exports[`Rendering bands - areas Single band area chart with null values Can render two points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 12.5,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        3,
        3,
        5,
      ],
      "mark": null,
      "x": 3,
      "y": 5,
    },
    "x": 75,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 12.5,
      "y": 0,
    },
    "value": {
      "accessor": "y0",
      "datum": [
        3,
        3,
        5,
      ],
      "mark": null,
      "x": 3,
      "y": 3,
    },
    "x": 75,
    "y": 70,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 12.5,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        2,
        3,
        5,
      ],
      "mark": null,
      "x": 2,
      "y": 5,
    },
    "x": 50,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 12.5,
      "y": 0,
    },
    "value": {
      "accessor": "y0",
      "datum": [
        2,
        3,
        5,
      ],
      "mark": null,
      "x": 2,
      "y": 3,
    },
    "x": 50,
    "y": 70,
  },
  {
    "color": "red",
    "isolated": true,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 12.5,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
  {
    "color": "red",
    "isolated": true,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesType": "area",
    "style": {
      "fill": {
        "color": [
          255,
          255,
          255,
          1,
        ],
      },
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 1.5,
      },
    },
    "transform": {
      "x": 12.5,
      "y": 0,
    },
    "value": {
      "accessor": "y0",
      "datum": [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 2,
    },
    "x": 0,
    "y": 80,
  },
]
`;

exports[`Rendering bands - areas Single series band bar chart - ordinal Can render two bars 1`] = `
[
  {
    "color": "red",
    "displayValue": undefined,
    "height": 80,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "dimmed": {
          "fill": "rgba(202, 211, 226, 0.35)",
          "texture": {
            "opacity": 0.25,
          },
        },
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "width": 25,
    "x": 0,
    "y": 0,
  },
  {
    "color": "red",
    "displayValue": undefined,
    "height": 20,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "dimmed": {
          "fill": "rgba(202, 211, 226, 0.35)",
          "texture": {
            "opacity": 0.25,
          },
        },
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        2,
        3,
        5,
      ],
      "mark": null,
      "x": 2,
      "y": 5,
    },
    "width": 25,
    "x": 50,
    "y": 50,
  },
  {
    "color": "red",
    "displayValue": undefined,
    "height": 40,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": [
        2,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 2,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "dimmed": {
          "fill": "rgba(202, 211, 226, 0.35)",
          "texture": {
            "opacity": 0.25,
          },
        },
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        3,
        4,
        8,
      ],
      "mark": null,
      "x": 3,
      "y": 8,
    },
    "width": 25,
    "x": 75,
    "y": 19.999999999999996,
  },
]
`;
